# licensing_specialist

./: BEFORE_AFTER_COMPARISON.md  CASCADE_DELETE_FIX.md  CASCADE_DELETE_QUICK_FIX.md  COMPLETE_SUMMARY.md  DOCUMENTATION_INDEX.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_CHECKLIST.md  README.md  README_UI_IMPROVEMENTS.md  UI_IMPROVEMENTS.md  VISUAL_IMPROVEMENTS.md  licenses_export.csv  licensing.db  pyproject.toml  reproduce_issue.py  schema.sql
.gitold/: config  index
.gitold/logs/: HEAD
.gitold/logs/refs/heads/: main
.gitold/logs/refs/remotes/Licensing/: master
.gitold/objects/pack/: pack-0b9666b50f74712d1ce6d804408149bcb7e42cce.idx  pack-0b9666b50f74712d1ce6d804408149bcb7e42cce.pack
.gitold/refs/heads/: main
.gitold/refs/remotes/Licensing/: master
src/licensing_specialist/: README_GUI.md  __main__.py  constants.py  db.py  db_helpers.py  gui.py  gui_helpers.py  main.py  pyside_gui.py  resources.qrc  resources_rc.py  services.py  style.qss  styles.py  test_db_practice_status.py  test_exam_tab.py  widgets.py
src/licensing_specialist/tabs/: class_tab.py  dashboard_tab.py  exam_tab.py  license_tab.py  recruiter_tab.py  trainee_tab.py
