[project]
name = "licensing-specialist"
version = "0.1.3"
description = "App for tracking trainees through the LLQP process."
authors = [
    { name = "Chris Hanlon", email = "arbalister@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.0",
]
[project.scripts]
l_spec = "licensing.specialist:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"